fixed the background color of the country card when searching for it on dark mode and added git ignore

--- a/style.css
+++ b/style.css
@@ -102,10 +102,10 @@ button {
 
 #cardInfo {
   display: none;
-  width: 30%;
+  width: 35%;
   margin: auto;
   top: 15%;
-  left: 35%;
+  left: 33%;
   border: solid black 3px;
   border-radius: 10px;
   position: fixed;
@@ -123,7 +123,7 @@ button {
   max-width: 94%;
   border-radius: 20px;
   padding-top: 5px;
-  padding-left: 12px;
+  padding-left: 8px;
 }
 
 #displayTextContainer {
@@ -135,8 +135,8 @@ button {
 .close {
   cursor: pointer;
   position: absolute;
-  top: 60%;
-  right: 4%;
+  top: 4%;
+  right: 1%;
   transform: translate(0%, -50%);
   font-size: 20px;
 }
